--- a/agradecimento.html
+++ b/agradecimento.html
@@ -18,7 +18,7 @@
     }
     // Obter os cookies gravados
     var cookies = document.cookie.split(';');
-    // Variáveis para armazenar os valores dos cookies
+    // Variáveis valores dos cookies
     var nome = '';
     var email = '';
     var msg = '';
